--- a/README
+++ b/README
@@ -2,4 +2,4 @@ A place for developing different LED visuals using a microcontroller and ws2128b
 
 The microcontroller code can be found under 'microcontroller' and is programmed using Arduino IDE.
 
-Eventually I'll add another folder for software to controller said micrcontroller from and app.
+Eventually I'll add another folder for software to controller said micrcontroller from an app.
